welcome.lessons.welcome.variables.Variables.scala.error
Variables:9: error: not found: value dejaFait
while(dejaFait!= s){
      ^